--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node src/app.js",
+  "build": "echo 'Nenhum comando de build específico necessário'"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
