--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "node src/app.js",
+  "start": "node app.js",
   "build": "echo 'Nenhum comando de build específico necessário'"
 },
   "keywords": [],
